# gorder

./: CHANGELOG.md  Cargo.toml  README.md
performance/: leaflets_benchmarks.md  main_benchmarks.md
pygorder/: Cargo.toml  DEV-README.md  pyproject.toml
pygorder/python/gorder/: __init__.pyi  analysis_types.pyi  estimate_error.pyi  geometry.pyi  leaflets.pyi  membrane_normal.pyi  ordermap.pyi  results.pyi
pygorder/src/: analysis.rs  estimate_error.rs  geometry.rs  leaflets.rs  lib.rs  normal.rs  ordermap.rs  results.rs
pygorder/tests/: test_run_access.py  test_run_write.py
src/: errors.rs  lib.rs  main.rs
src/analysis/: aaorder.rs  cgorder.rs  clustering.rs  common.rs  geometry.rs  index.rs  leaflets.rs  mod.rs  normal.rs  order.rs  ordermap.rs  pbc.rs  spherical_clustering.rs  spinner.rs  structure.rs  timewise.rs  uaorder.rs
src/analysis/topology/: atom.rs  bond.rs  classify.rs  mod.rs  molecule.rs  uatom.rs
src/application/: mod.rs
src/input/: analysis.rs  axis.rs  estimate_error.rs  frequency.rs  geometry.rs  leaflets.rs  membrane_normal.rs  mod.rs  ordermap.rs
src/presentation/: aaresults.rs  cgresults.rs  convergence.rs  converter.rs  csv_presenter.rs  leaflets.rs  mod.rs  normals.rs  ordermaps_presenter.rs  tab_presenter.rs  uaresults.rs  xvg_presenter.rs  yaml_presenter.rs
tests/: tests_aa.rs  tests_bin.rs  tests_cg.rs  tests_ua.rs
tests/common/: mod.rs
tests/files/: aa_order_cuboid_square_inverted.yaml  aa_order_cylinder_z_inverted.yaml  aa_order_sphere_dynamic_inverted.yaml  cg_order_cylinder_z_inverted.yaml  cg_order_vesicle_leaflets_flipped.yaml  leaflets_vesicle_all.yaml
tests/files/inputs/: inverted_cuboid.yaml
