[package]
name = "gorder"
version = "1.4.0-dev"
description = "Calculating lipid order parameters from Gromacs simulations"
edition = "2021"
rust-version = "1.82"
license = "MIT"
repository = "https://github.com/Ladme/gorder"
keywords = ["gromacs", "molecular-dynamics", "order", "nmr", "lipids"]
categories = ["command-line-utilities", "science"]
exclude = ["/tests", "/validation", "/pygorder", "/examples", "/performance"]

[dependencies]
backitup = "0.1.2"
groan_rs = { version = "0.11.2", features = ["parallel", "serde"] }
colored = "3.0.0"
thiserror = "2.0.12"
derive_builder = "0.20.2"
getset = "0.1.3"
log = "0.4.27"
hashbrown = { version = "0.15.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
indexmap = { version = "2.9.0", features = ["serde"] }
clap = { version = "4.5.39", features = ["derive"] }
colog = "1.3.0"
once_cell = "1.21.3"
statistical = "1.0.0"
strum_macros = "0.27.1"
parking_lot = "0.12.4"
nalgebra = { version = "0.34.0", features = ["rand"] }
glob = "0.3.2"
num = "0.4.3"
nalgebra-sparse = "0.11.0"

[dev-dependencies]
approx = "0.5.1"
tempfile = "3.20.0"
assert_cmd = "2.0.17"
rand = "0.9.1"
rand_distr = "0.5.1"

[workspace]
members = [".", "pygorder"]
