[package]
name = "pygorder"
version = "1.4.0"
edition = "2021"

[lib]
name = "gorder"
crate-type = ["cdylib", "rlib"]

[dependencies]
gorder_core = { package = "gorder", path = ".." }
hashbrown = "0.15.2"
numpy = "0.27.1"
pyo3 = "0.27.2"
colog = "1.3.0"
log = "0.4.22"
ctrlc = "3.4.5"
pyo3-stub-gen = "0.17.2"

[[bin]]
name = "stub_gen"
doc = false
